# C-

3DViewer/src/: Doxyfile  Makefile  readme.md
3DViewer/src/controller/: commands.h  controller.h
3DViewer/src/gui/: glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  options.h
3DViewer/src/model/: common.h  model.cpp  model.h  parser.cpp  parser.h  rotate_strategy.cpp  rotate_strategy.h
3DViewer/src/tests/: 1_init_test.cpp  2_transform_test.cpp  test.cpp  test.h
BrickGame Snake/src/: Doxyfile  main.cpp
BrickGame Snake/src/gui/desktop/: CMakeLists.txt  exit.ui  snake_game.cpp  snake_game.ui  tetris_game.cpp  tetris_game.h
src/: Makefile  controller.c  controller.h
src/brick_game/: backend.cpp  backend.hpp
src/brick_game/snake/: backend_s.cpp  consol_snake.h
src/brick_game/tetris/: backend_t.c  backend_t.h
src/doxygen/html/: annotated.html  annotated_dup.js  backend__s_8hpp.html  backend__s_8hpp.js  backend__t_8c.js  backend__t_8h.html  backend__t_8h.js  classes.html  consol__snake_8cpp.html  consol__snake_8cpp.js  consol__tetris_8c.html  consol__tetris_8h_source.html  dir_930df5328ec43cb5ed15fe5a3f90dda0.html  dir_a27466d1e2cff2d3a32cbaf29900b661.html  dir_eb72031c353f9ecdf51ac453b26ef86a.html  files.html  frontend__t_8c.js  frontend__t_8h.js  frontend__t_8h_source.html  functions.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js  struct_game_state__t-members.html  struct_game_state__t.html
src/gui/desktop/: exit.cpp  exit.h  mainwindow.cpp  (+4 more)
src/test/: clear.c  unit_test.cpp
(+106 files in other folders)
